--- a/styles/lazy-styles.css
+++ b/styles/lazy-styles.css
@@ -163,7 +163,7 @@
 
 .icon-ang-white {
   background-image: url("../icons/angle-right-white.svg");
-  height: 0.8125rem;
+  height: 0.675rem;
   width: 0.625rem;
   background-size: contain;
   padding-left: 0.3125rem;
